# py-faster-rcnn

./: README.md
c++interface/: CMakeLists.txt  main.cpp
c++interface/lib/: CMakeLists.txt  mask_rcnn.cpp  mask_rcnn.hpp
tools/: compress_net.py
